src/y.output
State 164 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 @1: ε

    2 $@2: ε

    3 $@3: ε

    4 programa: @1 PRINCIPAL $@2 $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque
    5         | error

    6 $@4: ε

    7 bloque: INI_BLOQUE $@4 cuerpo_bloque FIN_BLOQUE

    8 cuerpo_bloque: declar_de_variables_locales declar_de_subprogs sentencias
    9              | declar_de_variables_locales declar_de_subprogs

   10 declar_de_subprogs: declar_de_subprogs declar_subprog
   11                   | ε

   12 $@5: ε

   13 declar_subprog: cabecera_subprog $@5 bloque

   14 $@6: ε

   15 declar_de_variables_locales: INI_VAR $@6 variables_locales FIN_VAR
   16                            | ε

   17 variables_locales: variables_locales cuerpo_declar_variables
   18                  | cuerpo_declar_variables

   19 $@7: ε

   20 cuerpo_declar_variables: tipo $@7 varios_identificador PYC
   21                        | error

   22 $@8: ε

   23 $@9: ε

   24 cabecera_subprog: tipo IDENT $@8 $@9 PARENTESIS_ABRE parametros PARENTESIS_CIERRA
   25                 | error

   26 $@10: ε

   27 parametros: lista_parametros $@10

   28 lista_parametros: ε
   29                 | lista_parametros COMA tipo identificador
   30                 | tipo identificador

   31 $@11: ε

   32 sentencias: sentencias $@11 sentencia

   33 $@12: ε

   34 sentencias: $@12 sentencia

   35 sentencia: bloque
   36          | sentencia_asignacion
   37          | sentencia_si
   38          | sentencia_mientras
   39          | sentencia_entrada
   40          | sentencia_salida
   41          | sentencia_retorno
   42          | identificador DIRECCION PYC
   43          | DIRECCION identificador PYC

   44 sentencia_asignacion: identificador OP_ASIGNACION expresion PYC

   45 sentencia_si: SI PARENTESIS_ABRE expresion PARENTESIS_CIERRA sentencia
   46             | SI PARENTESIS_ABRE expresion PARENTESIS_CIERRA sentencia SINO sentencia

   47 sentencia_mientras: MIENTRAS PARENTESIS_ABRE expresion PARENTESIS_CIERRA sentencia

   48 sentencia_entrada: ENTRADA DIRECCION lista_variables PYC

   49 sentencia_salida: IMPRIMIR DIRECCION lista_expresiones_o_cadena PYC

   50 @13: ε

   51 sentencia_retorno: DEVOLVER expresion @13 PYC

   52 expresion: PARENTESIS_ABRE expresion PARENTESIS_CIERRA
   53          | OP_UNARIO expresion
   54          | expresion OP_UNARIO
   55          | expresion OP_TERNARIO CONSTANTE_NUM
   56          | expresion OP_OR expresion
   57          | expresion OP_AND expresion
   58          | expresion OP_XOR expresion
   59          | expresion OP_RELACION expresion
   60          | expresion OP_MULTIPLICATIVO expresion
   61          | expresion OP_IGUALDAD expresion
   62          | expresion OP_ADITIVO expresion
   63          | OP_ADITIVO expresion
   64          | expresion SIGSIG expresion
   65          | identificador
   66          | constante
   67          | funcion
   68          | lista_constantes
   69          | error

   70 varios_identificador: identificador
   71                     | varios_identificador COMA identificador

   72 identificador: IDENT

   73 lista_expresiones_o_cadena: lista_expresiones_o_cadena DIRECCION expresion_o_cadena
   74                           | expresion_o_cadena

   75 expresion_o_cadena: expresion
   76                   | CADENA

   77 constante: BOOLEANO
   78          | CONSTANTE_NUM
   79          | CONSTANTE_FLOAT
   80          | CONSTANTE_CAR

   81 tipo: TIPO_DATO
   82     | LISTA TIPO_DATO

   83 lista_variables: identificador
   84                | DIRECCION lista_variables
   85                | identificador DIRECCION identificador

   86 funcion: IDENT PARENTESIS_ABRE lista_expresiones PARENTESIS_CIERRA
   87        | IDENT PARENTESIS_ABRE PARENTESIS_CIERRA

   88 lista_expresiones: lista_expresiones COMA expresion
   89                  | expresion

   90 lista_constantes: lista_constante_booleano
   91                 | lista_constante_entero
   92                 | lista_constante_flotante
   93                 | lista_constante_car

   94 lista_constante_booleano: CORCHETE_ABRE contenido_lista_booleano CORCHETE_CIERRA

   95 contenido_lista_booleano: BOOLEANO
   96                         | BOOLEANO COMA contenido_lista_booleano

   97 lista_constante_entero: CORCHETE_ABRE contenido_lista_entero CORCHETE_CIERRA

   98 contenido_lista_entero: CONSTANTE_NUM
   99                       | CONSTANTE_NUM COMA contenido_lista_entero

  100 lista_constante_flotante: CORCHETE_ABRE contenido_lista_flotante CORCHETE_CIERRA

  101 contenido_lista_flotante: CONSTANTE_FLOAT
  102                         | CONSTANTE_FLOAT COMA contenido_lista_flotante

  103 lista_constante_car: CORCHETE_ABRE contenido_lista_car CORCHETE_CIERRA

  104 contenido_lista_car: CONSTANTE_CAR
  105                    | CONSTANTE_CAR COMA contenido_lista_car


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5 21 25 69
    INI_VAR (258) 15
    FIN_VAR (259) 15
    PRINCIPAL (260) 4
    INI_BLOQUE (261) 7
    FIN_BLOQUE (262) 7
    OP_OR (263) 56
    OP_AND (264) 57
    OP_XOR (265) 58
    OP_IGUALDAD (266) 61
    OP_RELACION (267) 59
    OP_ADITIVO (268) 62 63
    SIGSIG (269) 64
    OP_MULTIPLICATIVO (270) 60
    OP_UNARIO (271) 53 54
    OP_TERNARIO (272) 55
    OP_ASIGNACION (273) 44
    BOOLEANO (274) 77 95 96
    CONSTANTE_NUM (275) 55 78 98 99
    CONSTANTE_CAR (276) 80 104 105
    CONSTANTE_FLOAT (277) 79 101 102
    TIPO_DATO (278) 81 82
    CADENA (279) 76
    LISTA (280) 82
    MIENTRAS (281) 47
    SI (282) 45 46
    SINO (283) 46
    ENTRADA (284) 48
    IMPRIMIR (285) 49
    DEVOLVER (286) 51
    DIRECCION (287) 42 43 48 49 73 84 85
    IDENT (288) 24 72 86 87
    PARENTESIS_ABRE (289) 4 24 45 46 47 52 86 87
    PARENTESIS_CIERRA (290) 4 24 45 46 47 52 86 87
    CORCHETE_ABRE (291) 94 97 100 103
    CORCHETE_CIERRA (292) 94 97 100 103
    COMA (293) 29 71 88 96 99 102 105
    PYC (294) 20 42 43 44 48 49 51


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    programa (41)
        on left: 4 5
        on right: 0
    @1 (42)
        on left: 1
        on right: 4
    $@2 (43)
        on left: 2
        on right: 4
    $@3 (44)
        on left: 3
        on right: 4
    bloque (45)
        on left: 7
        on right: 4 13 35
    $@4 (46)
        on left: 6
        on right: 7
    cuerpo_bloque (47)
        on left: 8 9
        on right: 7
    declar_de_subprogs (48)
        on left: 10 11
        on right: 8 9 10
    declar_subprog (49)
        on left: 13
        on right: 10
    $@5 (50)
        on left: 12
        on right: 13
    declar_de_variables_locales (51)
        on left: 15 16
        on right: 8 9
    $@6 (52)
        on left: 14
        on right: 15
    variables_locales (53)
        on left: 17 18
        on right: 15 17
    cuerpo_declar_variables (54)
        on left: 20 21
        on right: 17 18
    $@7 (55)
        on left: 19
        on right: 20
    cabecera_subprog (56)
        on left: 24 25
        on right: 13
    $@8 (57)
        on left: 22
        on right: 24
    $@9 (58)
        on left: 23
        on right: 24
    parametros (59)
        on left: 27
        on right: 4 24
    $@10 (60)
        on left: 26
        on right: 27
    lista_parametros (61)
        on left: 28 29 30
        on right: 27 29
    sentencias (62)
        on left: 32 34
        on right: 8 32
    $@11 (63)
        on left: 31
        on right: 32
    $@12 (64)
        on left: 33
        on right: 34
    sentencia (65)
        on left: 35 36 37 38 39 40 41 42 43
        on right: 32 34 45 46 47
    sentencia_asignacion (66)
        on left: 44
        on right: 36
    sentencia_si (67)
        on left: 45 46
        on right: 37
    sentencia_mientras (68)
        on left: 47
        on right: 38
    sentencia_entrada (69)
        on left: 48
        on right: 39
    sentencia_salida (70)
        on left: 49
        on right: 40
    sentencia_retorno (71)
        on left: 51
        on right: 41
    @13 (72)
        on left: 50
        on right: 51
    expresion (73)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
        on right: 44 45 46 47 51 52 53 54 55 56 57 58 59 60 61 62 63 64 75 88 89
    varios_identificador (74)
        on left: 70 71
        on right: 20 71
    identificador (75)
        on left: 72
        on right: 29 30 42 43 44 65 70 71 83 85
    lista_expresiones_o_cadena (76)
        on left: 73 74
        on right: 49 73
    expresion_o_cadena (77)
        on left: 75 76
        on right: 73 74
    constante (78)
        on left: 77 78 79 80
        on right: 66
    tipo (79)
        on left: 81 82
        on right: 20 24 29 30
    lista_variables (80)
        on left: 83 84 85
        on right: 48 84
    funcion (81)
        on left: 86 87
        on right: 67
    lista_expresiones (82)
        on left: 88 89
        on right: 86 88
    lista_constantes (83)
        on left: 90 91 92 93
        on right: 68
    lista_constante_booleano (84)
        on left: 94
        on right: 90
    contenido_lista_booleano (85)
        on left: 95 96
        on right: 94 96
    lista_constante_entero (86)
        on left: 97
        on right: 91
    contenido_lista_entero (87)
        on left: 98 99
        on right: 97 99
    lista_constante_flotante (88)
        on left: 100
        on right: 92
    contenido_lista_flotante (89)
        on left: 101 102
        on right: 100 102
    lista_constante_car (90)
        on left: 103
        on right: 93
    contenido_lista_car (91)
        on left: 104 105
        on right: 103 105


State 0

    0 $accept: • programa $end

    error  shift, and go to state 1

    PRINCIPAL  reduce using rule 1 (@1)

    programa  go to state 2
    @1        go to state 3


State 1

    5 programa: error •

    $default  reduce using rule 5 (programa)


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    4 programa: @1 • PRINCIPAL $@2 $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque

    PRINCIPAL  shift, and go to state 5


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    4 programa: @1 PRINCIPAL • $@2 $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque

    $default  reduce using rule 2 ($@2)

    $@2  go to state 6


State 6

    4 programa: @1 PRINCIPAL $@2 • $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque

    $default  reduce using rule 3 ($@3)

    $@3  go to state 7


State 7

    4 programa: @1 PRINCIPAL $@2 $@3 • PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque

    PARENTESIS_ABRE  shift, and go to state 8


State 8

    4 programa: @1 PRINCIPAL $@2 $@3 PARENTESIS_ABRE • parametros PARENTESIS_CIERRA bloque

    TIPO_DATO  shift, and go to state 9
    LISTA      shift, and go to state 10

    $default  reduce using rule 28 (lista_parametros)

    parametros        go to state 11
    lista_parametros  go to state 12
    tipo              go to state 13


State 9

   81 tipo: TIPO_DATO •

    $default  reduce using rule 81 (tipo)


State 10

   82 tipo: LISTA • TIPO_DATO

    TIPO_DATO  shift, and go to state 14


State 11

    4 programa: @1 PRINCIPAL $@2 $@3 PARENTESIS_ABRE parametros • PARENTESIS_CIERRA bloque

    PARENTESIS_CIERRA  shift, and go to state 15


State 12

   27 parametros: lista_parametros • $@10
   29 lista_parametros: lista_parametros • COMA tipo identificador

    COMA  shift, and go to state 16

    $default  reduce using rule 26 ($@10)

    $@10  go to state 17


State 13

   30 lista_parametros: tipo • identificador

    IDENT  shift, and go to state 18

    identificador  go to state 19


State 14

   82 tipo: LISTA TIPO_DATO •

    $default  reduce using rule 82 (tipo)


State 15

    4 programa: @1 PRINCIPAL $@2 $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA • bloque

    INI_BLOQUE  shift, and go to state 20

    bloque  go to state 21


State 16

   29 lista_parametros: lista_parametros COMA • tipo identificador

    TIPO_DATO  shift, and go to state 9
    LISTA      shift, and go to state 10

    tipo  go to state 22


State 17

   27 parametros: lista_parametros $@10 •

    $default  reduce using rule 27 (parametros)


State 18

   72 identificador: IDENT •

    $default  reduce using rule 72 (identificador)


State 19

   30 lista_parametros: tipo identificador •

    $default  reduce using rule 30 (lista_parametros)


State 20

    7 bloque: INI_BLOQUE • $@4 cuerpo_bloque FIN_BLOQUE

    $default  reduce using rule 6 ($@4)

    $@4  go to state 23


State 21

    4 programa: @1 PRINCIPAL $@2 $@3 PARENTESIS_ABRE parametros PARENTESIS_CIERRA bloque •

    $default  reduce using rule 4 (programa)


State 22

   29 lista_parametros: lista_parametros COMA tipo • identificador

    IDENT  shift, and go to state 18

    identificador  go to state 24


State 23

    7 bloque: INI_BLOQUE $@4 • cuerpo_bloque FIN_BLOQUE

    INI_VAR  shift, and go to state 25

    $default  reduce using rule 16 (declar_de_variables_locales)

    cuerpo_bloque                go to state 26
    declar_de_variables_locales  go to state 27


State 24

   29 lista_parametros: lista_parametros COMA tipo identificador •

    $default  reduce using rule 29 (lista_parametros)


State 25

   15 declar_de_variables_locales: INI_VAR • $@6 variables_locales FIN_VAR

    $default  reduce using rule 14 ($@6)

    $@6  go to state 28


State 26

    7 bloque: INI_BLOQUE $@4 cuerpo_bloque • FIN_BLOQUE

    FIN_BLOQUE  shift, and go to state 29


State 27

    8 cuerpo_bloque: declar_de_variables_locales • declar_de_subprogs sentencias
    9              | declar_de_variables_locales • declar_de_subprogs

    $default  reduce using rule 11 (declar_de_subprogs)

    declar_de_subprogs  go to state 30


State 28

   15 declar_de_variables_locales: INI_VAR $@6 • variables_locales FIN_VAR

    error      shift, and go to state 31
    TIPO_DATO  shift, and go to state 9
    LISTA      shift, and go to state 10

    variables_locales        go to state 32
    cuerpo_declar_variables  go to state 33
    tipo                     go to state 34


State 29

    7 bloque: INI_BLOQUE $@4 cuerpo_bloque FIN_BLOQUE •

    $default  reduce using rule 7 (bloque)


State 30

    8 cuerpo_bloque: declar_de_variables_locales declar_de_subprogs • sentencias
    9              | declar_de_variables_locales declar_de_subprogs •
   10 declar_de_subprogs: declar_de_subprogs • declar_subprog

    error      shift, and go to state 35
    TIPO_DATO  shift, and go to state 9
    LISTA      shift, and go to state 10

    INI_BLOQUE  reduce using rule 33 ($@12)
    FIN_BLOQUE  reduce using rule 9 (cuerpo_bloque)
    MIENTRAS    reduce using rule 33 ($@12)
    SI          reduce using rule 33 ($@12)
    ENTRADA     reduce using rule 33 ($@12)
    IMPRIMIR    reduce using rule 33 ($@12)
    DEVOLVER    reduce using rule 33 ($@12)
    DIRECCION   reduce using rule 33 ($@12)
    IDENT       reduce using rule 33 ($@12)

    declar_subprog    go to state 36
    cabecera_subprog  go to state 37
    sentencias        go to state 38
    $@12              go to state 39
    tipo              go to state 40


State 31

   21 cuerpo_declar_variables: error •

    $default  reduce using rule 21 (cuerpo_declar_variables)


State 32

   15 declar_de_variables_locales: INI_VAR $@6 variables_locales • FIN_VAR
   17 variables_locales: variables_locales • cuerpo_declar_variables

    error      shift, and go to state 31
    FIN_VAR    shift, and go to state 41
    TIPO_DATO  shift, and go to state 9
    LISTA      shift, and go to state 10

    cuerpo_declar_variables  go to state 42
    tipo                     go to state 34


State 33

   18 variables_locales: cuerpo_declar_variables •

    $default  reduce using rule 18 (variables_locales)


State 34

   20 cuerpo_declar_variables: tipo • $@7 varios_identificador PYC

    $default  reduce using rule 19 ($@7)

    $@7  go to state 43


State 35

   25 cabecera_subprog: error •

    $default  reduce using rule 25 (cabecera_subprog)


State 36

   10 declar_de_subprogs: declar_de_subprogs declar_subprog •

    $default  reduce using rule 10 (declar_de_subprogs)


State 37

   13 declar_subprog: cabecera_subprog • $@5 bloque
